--- a/styles.css
+++ b/styles.css
@@ -37,22 +37,13 @@ input {
   margin-top: 5px;
 }
 
-#PhotoContainer {
-  margin-top: 20px;
-  text-align: center;
-}
-
-#PhotoContainer img {
-  max-width: 100%;
-  max-height: 400%;
-  
-}
 
 button[type="button"] {
   margin-top: 10px;
 }
 
 #result {
+  font-family: system-ui;
   margin-top: 20px;
   padding: 10px;
   border: 1px solid #ccc;
