--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,10 @@ input {
   padding: 5px;
   margin-top: 5px;
 }
-#addEducation {
+
+#addForm {
   margin-top: 10px;
 }
-
-
 button[type="button"] {
   margin-top: 10px;
 }
@@ -53,4 +52,6 @@ button[type="button"] {
   border: 1px solid #ccc;
   display: none; 
 }
-
+ .form-container {
+   margin-top: 50px;
+ }
