--- a/print.css
+++ b/print.css
@@ -1,18 +1,34 @@
+body {
+  font-family: Arial, sans-serif;
+}
+
 #headHr {
   margin-left: 20%;
   margin-right: 20%;
   color: #268736;
 }
+
 .info {
   display: none;
   margin-top: 10px;
   }
-body {
-  font-family: Arial, sans-serif;
+
+#form {
+  display:none;
 }
+.form-container {
+  line-height: 5pt;
+  display:block
+}
+
 #printButton {
   display: none;
 }
+
+#addForm {
+  display: none;
+}
+
 h1 {
   text-align: center;
 }
@@ -27,7 +43,4 @@ hr {
 }
 div {
   margin-top: 10%;
-}
-#addForm {
-  display: none;
 }
